Remove performance impacting code